# OntoCodeIndex

./: Design.md  LICENSE  README.md  pyproject.toml
ontocode/: __init__.py  cli.py  config.py  git_utils.py  logging.py  paths.py
ontocode/extract/: base.py  ts_bridge.py
ontocode/extract/lsp_client/: __init__.py  client.py  messages.py
ontocode/plugins/typescript/: mapping.py
ontocode/rdf/: rules_runner.py  shacl_runner.py  writer.py
ontocode/rdf/rules/: rules-core.rq  rules-next.rq
ontocode/rdf/shapes/: laco-core.shapes.ttl  next.shapes.ttl
ontocode/rdf/vocab/: laco.ttl  lasa.ttl  next.ttl
ontocode/resources/ts_extractor/: package-lock.json  package.json  tsconfig.json
ontocode/resources/ts_extractor/src/: collect.ts  index.ts
ontocode/tests/: test_build_min.py
ontocode/tests/data/next_min/app/api/users/: route.ts
ontocode/tests/data/next_min/app/home/: page.tsx
ontocode/tests/data/next_min/lib/: user.ts
